force-app/main/default/objects/Attendance_Event__c/Attendance_Event__c.object-meta.xml
<CustomObject>
    <description>Stores information about a student&apos;s attendance.</description>
    <label>Attendance Event</label>
    <nameField>
        <displayFormat>AE-{0000}</displayFormat>
        <label>Attendance Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>