force-app/main/default/objects/Attendance_Event__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <description>The time a tardy student arrived.</description>
    <inlineHelpText>The time a tardy student arrived.</inlineHelpText>
    <label>Arrival Time</label>
    <type>Time</type>
</CustomField>