force-app/main/default/objects/Attendance_Event__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The student who&apos;s tardy or absent.</description>
    <inlineHelpText>The student who&apos;s tardy or absent.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendance Events</relationshipLabel>
    <relationshipName>Attendance_Events</relationshipName>
    <type>Lookup</type>
</CustomField>