force-app/main/default/objects/Attendance_Event__c/fields/Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The class and period in which the student was tardy or absent.</description>
    <inlineHelpText>The class and period in which the student was tardy or absent.</inlineHelpText>
    <label>Course Connection</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>Attendance Events</relationshipLabel>
    <relationshipName>Attendance_Events</relationshipName>
    <type>Lookup</type>
</CustomField>