force-app/main/default/objects/Attendance_Event__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>The name of the Course in which the student was tardy or absent (read-only).</description>
    <formula>Course_Connection__r.Course_Offering__r.Course__r.Name</formula>
    <inlineHelpText>The name of the Course in which the student was tardy or absent (read-only).</inlineHelpText>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>