force-app/main/default/objects/Attendance_Event__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date of the tardy or absence.</description>
    <inlineHelpText>The date of the tardy or absence.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>