force-app/main/default/objects/Attendance_Event__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>For a partial-day excused absence, the time the student returned.</description>
    <inlineHelpText>For a partial-day excused absence, the time the student returned.</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>