force-app/main/default/objects/Attendance_Event__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Select an option that most closely matches the reason the student was absent or tardy. Use the Reason Description field to enter more details.</description>
    <inlineHelpText>Select an option that most closely matches the reason the student was absent or tardy. Use the Reason Description field to enter more details.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Religious</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>